@@ -26,7 +26,6 @@
 package org.omegat.gui.glossary;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -82,15 +81,15 @@ public class GlossarySearcher {
         return filterGlossary(result);
     }
 
-    public List<Token> searchSourceMatchTokens(SourceTextEntry ste, GlossaryEntry entry) {
+    public List<Token[]> searchSourceMatchTokens(SourceTextEntry ste, GlossaryEntry entry) {
         // Compute source entry tokens
         Token[] strTokens = tokenize(ste.getSrcText(), TagUtil.buildTagList(ste.getSrcText(), ste.getProtectedParts()));
 
-        Token[] toks = getMatchingTokens(strTokens, ste.getSrcText(), entry.getSrcText());
-        if (toks.length == 0) {
+        List<Token[]> toks = getMatchingTokens(strTokens, ste.getSrcText(), entry.getSrcText());
+        if (toks.isEmpty()) {
             toks = getCjkMatchingTokens(ste.getSrcText(), entry.getSrcText());
         }
-        return Arrays.asList(toks);
+        return toks;
     }
 
     public List<String> searchTargetMatches(String trg, ProtectedPart[] protectedParts, GlossaryEntry entry) {
@@ -117,23 +116,20 @@ public class GlossarySearcher {
     }
 
     private boolean isTokenMatch(Token[] fullTextTokens, String fullText, String term) {
-        return getMatchingTokens(fullTextTokens, fullText, term).length > 0;
+        return !getMatchingTokens(fullTextTokens, fullText, term).isEmpty();
     }
 
-    private Token[] getMatchingTokens(Token[] fullTextTokens, String fullText, String term) {
+    private List<Token[]> getMatchingTokens(Token[] fullTextTokens, String fullText, String term) {
         // Compute glossary entry tokens
         Token[] glosTokens = tokenize(term);
         if (glosTokens.length == 0) {
-            return DefaultTokenizer.EMPTY_TOKENS_LIST;
+            return Collections.emptyList();
         }
         boolean notExact = Preferences.isPreferenceDefault(Preferences.GLOSSARY_NOT_EXACT_MATCH,
                 Preferences.GLOSSARY_NOT_EXACT_MATCH_DEFAULT);
-        Token[] foundTokens = DefaultTokenizer.searchAll(fullTextTokens, glosTokens, notExact);
-        if (keepMatch(foundTokens, fullText, term)) {
-            return foundTokens;
-        } else {
-            return DefaultTokenizer.EMPTY_TOKENS_LIST;
-        }
+        List<Token[]> foundTokens = DefaultTokenizer.searchAll(fullTextTokens, glosTokens, notExact);
+        foundTokens.removeIf(toks -> !keepMatch(toks, fullText, term));
+        return foundTokens;
     }
 
     private static boolean keepMatch(Token[] tokens, String srcTxt, String locTxt) {
@@ -158,26 +154,26 @@ public class GlossarySearcher {
                 && StringUtil.isCJK(term) && fullText.contains(term);
     }
 
-    private static Token[] getCjkMatchingTokens(String fullText, String term) {
+    private static List<Token[]> getCjkMatchingTokens(String fullText, String term) {
         // This is a CJK word and our source language is not space-delimited, so include if
         // word appears anywhere in source string.
         IProject project = Core.getProject();
         if (!project.isProjectLoaded() || project.getProjectProperties().getSourceLanguage().isSpaceDelimited()) {
-            return DefaultTokenizer.EMPTY_TOKENS_LIST;
+            return Collections.emptyList();
         }
         if (!StringUtil.isCJK(term)) {
-            return DefaultTokenizer.EMPTY_TOKENS_LIST;
+            return Collections.emptyList();
         }
         int i = fullText.indexOf(term);
         if (i == -1) {
-            return DefaultTokenizer.EMPTY_TOKENS_LIST;
+            return Collections.emptyList();
         }
-        List<Token> result = new ArrayList<>();
-        result.add(new Token(term, i));
+        List<Token[]> result = new ArrayList<>();
+        result.add(new Token[] { new Token(term, i) });
         while ((i = fullText.indexOf(term, i + 1)) != -1) {
-            result.add(new Token(term, i));
+            result.add(new Token[] { new Token(term, i) });
         }
-        return result.toArray(new Token[result.size()]);
+        return result;
     }
 
     private Token[] tokenize(String str) {
