@@ -2,7 +2,7 @@
  OmegaT 4.1.3 update 1
 ----------------------------------------------------------------------
   1 Enhancement
-  1 Bug fix
+  2 Bug fixes
   3 Localisation updates
 ----------------------------------------------------------------------
 4.1.3 update 1 vs 4.1.3
@@ -15,7 +15,10 @@ arrow keys
 
   Bug fixes:
 
-  - Download Team Projects failed to download content for 3.6-style 
+  - Terms are only highlighted once in the Editor
+  https://sourceforge.net/p/omegat/bugs/890/
+
+  - Download Team Projects failed to download content for 3.6-style
 projects (i.e., with no mapping information)
 
   Localisation Updates:
